[gd_scene load_steps=8 format=3 uid="uid://bov7s7xd22ow"]

[ext_resource type="Texture2D" uid="uid://byvmx6dnkdscc" path="res://assets/phone calls/teleefon.png" id="1_to8rg"]
[ext_resource type="Script" uid="uid://dnvf4gwm4glof" path="res://Scripts/phone/phone_game.gd" id="1_vtp42"]
[ext_resource type="Texture2D" uid="uid://b1v5270h0pbth" path="res://assets/phone calls/number1.png" id="2_rsgch"]
[ext_resource type="Texture2D" uid="uid://cfob52lwmo61j" path="res://assets/tasks/nextGame.png" id="3_e8b35"]
[ext_resource type="Texture2D" uid="uid://borfgiyy1yxg6" path="res://assets/tasks/phone game.png" id="4_lnbmy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2fo5"]
bg_color = Color(0.610296, 0.0515336, 0.146429, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2cby"]
bg_color = Color(1, 0.101961, 0.188235, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node" type="Node"]
script = ExtResource("1_vtp42")

[node name="Phone" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_to8rg")

[node name="Number" type="TextureRect" parent="."]
offset_left = -21.0
offset_top = 208.0
offset_right = 336.0
offset_bottom = 426.0
texture = ExtResource("2_rsgch")

[node name="Tutorial" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_e8b35")

[node name="Text" type="TextureRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -48.0
offset_right = 157.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lnbmy")

[node name="Markers" type="Node" parent="."]

[node name="Marker0" type="Marker2D" parent="Markers"]
position = Vector2(503, 412)

[node name="Marker1" type="Marker2D" parent="Markers"]
position = Vector2(410, 289)

[node name="Marker2" type="Marker2D" parent="Markers"]
position = Vector2(455, 278)

[node name="Marker3" type="Marker2D" parent="Markers"]
position = Vector2(503, 265)

[node name="Marker4" type="Marker2D" parent="Markers"]
position = Vector2(428, 335)

[node name="Marker5" type="Marker2D" parent="Markers"]
position = Vector2(474, 322)

[node name="Marker6" type="Marker2D" parent="Markers"]
position = Vector2(520, 312)

[node name="Marker7" type="Marker2D" parent="Markers"]
position = Vector2(443, 381)

[node name="Marker8" type="Marker2D" parent="Markers"]
position = Vector2(488, 367)

[node name="Marker9" type="Marker2D" parent="Markers"]
position = Vector2(536, 357)

[node name="MarkerCall" type="Marker2D" parent="Markers"]
position = Vector2(404, 243)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 10
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -100.0
offset_right = 313.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_q2fo5")
theme_override_styles/fill = SubResource("StyleBoxFlat_f2cby")
max_value = 15.0
value = 10.0
show_percentage = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
